# Astrotalk

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  ENGAGEMENT_PLAN.md  GROWTH_PLAN.md  GUARDRAILS.md  NEEDS_ASTROLOGER.md  README.md  Tara-Project-Documentation.md  alembic.ini  docker-compose.yml  generate_content_review_pdf.py  generate_dev_guide_pdf.py  generate_pdf.py  pyproject.toml  requirements.txt  tara.db  worker.py
app/: __init__.py  main.py
app/platform/: __init__.py  admin_auth.py  cards.py  celery_app.py  config.py  cron_auth.py  db.py  errors.py  events.py  logging.py  logging_config.py  metrics.py  mongo.py  storage.py
app/web/: admin.html  admin.js  app.js  auth.html  auth.js  console.html  (+5 more)
docs/: new-ui-prompt.md
evals/: __init__.py  golden_set.py  run.py
migrations/: env.py
scripts/: build_growth_pdf.py  build_growth_plan_pdf_ml.py  build_pitch_deck_en.py  build_pitch_deck_ml.py  build_temple_partnership_pdf_ml.py  migrate.py  start.sh
tests/: test_admin.py  test_astrologers.py  test_astrology_engine.py  test_booking.py  test_chat.py  test_chat_history.py  test_chat_recurrence.py  test_chat_suggestions.py  test_cloud_api.py  test_commerce.py  test_community.py  test_content.py  test_crm.py  test_doshas.py  test_health.py  test_identity.py  test_knowledge.py  test_llm_provider.py  test_orgs.py  test_platform_enablers.py  test_porutham.py  test_prashnam.py  test_saas_billing.py  test_swiss_ephemeris.py  test_temple_partners.py  test_temples.py  test_tone_safety.py  test_vimshottari.py  test_virality.py  test_whatsapp.py
(+132 files in other folders)
